<resources>
    <string name="app_name">Note</string>
    <string name="title_activity_home">Note</string>
    <string name="action_sort">Sort</string>
    <string name="select">Select</string>
    <string name="action_search">Search</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="action_color">Background Color</string>
    <string name="attach">Attach</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="note">Note</string>
    <string name="select_all">Select all</string>
    <string name="add_note">Add Note</string>
    <string name="share">Share</string>
    <string name="save_as">Save as</string>
    <string name="spring_rain">Spring Rain</string>
    <string name="illusion">Illusion</string>
    <string name="cherokee">Cherokee</string>
    <string name="we_peep">We Peep</string>
    <string name="cruise">Cruise</string>
    <string name="oyster_bay">Oyster Bay</string>
    <string name="update">Update</string>
    <string name="date_created">Date Created</string>
    <string name="font_color">Font Color</string>
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>

</resources>