<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".fragments.AddFragment">
        <androidx.appcompat.widget.Toolbar
            app:menu="@menu/menu_options"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin">
            <ImageView
                android:id="@+id/ivBack"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:contentDescription="@string/back" />
        </androidx.appcompat.widget.Toolbar>
        <EditText
            app:layout_constraintTop_toBottomOf="@id/imagelayout"
            app:layout_constraintStart_toStartOf="parent"
            android:maxLines="1"
            android:textSize="@dimen/title_text_fragment"
            android:textColor="@color/line"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginTop="32dp"
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <RelativeLayout
            android:visibility="gone"
            android:background="@android:color/transparent"
            android:id="@+id/imagelayout"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:id="@+id/ivImage" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/ivImageDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ivImage"
                android:layout_alignEnd="@id/ivImage"
                android:backgroundTint="@color/white"
                android:src="@drawable/cancel" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="start"
            android:hint="@string/enter_your_message"
            android:inputType="textCapSentences|textMultiLine"
            android:lineSpacingExtra="15dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/bg_grey"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:textSize="@dimen/text_size"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView></layout>