<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:id="@+id/layoutContainer"
        android:orientation="vertical"
    tools:context=".fragments.HomeFragment">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutMain"
            android:background="@color/bg_light"
            android:fitsSystemWindows="true"
            tools:context=".HomeActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                app:elevation="0dp"
                android:background="@color/bg_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:fitsSystemWindows="true">
                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbarStyle="insideOverlay"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/tvTopName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/heading_text"
                            android:textColor="@color/bg_secondary"
                            android:text="@string/note" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/notes_size"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/text_color"
                            android:layout_gravity="center" />
                    </LinearLayout>
                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:background="@color/bg_light"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin">
                        <TextView
                            android:id="@+id/tvName"
                            android:visibility="gone"
                            android:layout_marginEnd="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bg_secondary"
                            android:textSize="@dimen/title_text"
                            android:layout_gravity="start" />
                        <SearchView
                            android:background="@drawable/shape_layout"
                            android:backgroundTint="@color/white"
                            android:queryHint="Search your notes"
                            android:id="@+id/search_view"
                            android:layout_marginEnd="16dp"
                            android:iconifiedByDefault="false"
                            android:queryBackground="@android:color/transparent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:icon="@drawable/search"
                            android:title="@string/action_search"
                            android:layout_gravity="start"/>
                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:background="@drawable/shape_layout"
                android:id="@+id/GridLayout"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:backgroundTint="@color/bg_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddNote"
                app:borderWidth="0dp"
                android:layout_margin="@dimen/margin_Medium"
                android:src="@drawable/add_note"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/add_note" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout></layout>